fix: swagger annotations for auth/user, admin/users
